--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
 /* General */
 
 h1 {
-  font-size: 5em;
+  font-size: 6em;
   font-family: 'Vollkorn', serif;
   font-weight: normal;
+}
+
+h2 {
+  padding-bottom: 0.3em;
+  border-bottom: 1px solid lightgray;
+}
+
+ul {
+  padding-left: 0;
+  list-style-type: none;
 }
 
 .subheading {
@@ -12,7 +22,16 @@ h1 {
 
 body {
   margin: 0;
+  font-family: 'Open Sans', sans-serif;
 }
+
+img {
+  margin-top: 0.5em;
+  border-radius: 50%;
+}
+
+
+
 
 /* Header area*/
 
@@ -26,7 +45,27 @@ body {
   margin-right: auto;
   padding-top: 8em;
   padding-bottom: 4em;
-  width: 40%;
+  width: 45%;
+}
+
+
+/* Main Content */
+
+.main-content {
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4em;
+  line-height: 1.5;
+}
+
+.quote {
+  font-size: 1.3em;
+  margin-bottom: 5em;
+}
+
+.instructor-list li {
+  margin-top: 0.5em;
 }
 
 
